# zenapi_cz

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
examples_basic/: APIGetDocumentation.py
src/zenapi_cz/: __init__.py  fetch_routersinfo.py  routermap.py  zenapi_basic_client.py  zenapi_basic_session.py
src/zenapi_cz/routers/: AWSRouter.yaml  AzureRouter.yaml  CallhomeRouter.yaml  CiscoAPICRouter.yaml  ConfigurationManagerRouter.yaml  DashboardRouter.yaml  DetailNavRouter.yaml  DeviceDumpLoadRouter.yaml  DeviceManagementRouter.yaml  DeviceRouter.yaml  EventClassesRouter.yaml  JobsRouter.yaml  KubernetesRouter.yaml  ManufacturersRouter.yaml  MetaTypeConfigRouter.yaml  MibRouter.yaml  (+9 more)
tests/: test_basicclient.py
zenapi_cz/: __init__.py  fetch_routersinfo.py  zenapi_basic_client.py  zenapi_basic_session.py  zenapi_exceptions.py
zenapi_cz/routers/: ApplicationRouter.yaml  CapacityRouter.yaml  CelerraSystemRouter.yaml  CiscoUCSRouter.yaml  CloudViewRouter.yaml  ComponentGroupRouter.yaml  DiscMapRouter.yaml  DistributedCollectorRouter.yaml  DynamicViewRouter.yaml  ElementPoolRouter.yaml  EnterpriseServicesRouter.yaml  GoogleCloudPlatformRouter.yaml  HostRouter.yaml  ImpactRouter.yaml  IntrospectionRouter.yaml  LicensingRouter.yaml  LogicalNodeRouter.yaml  MessagingRouter.yaml  MonitorRouter.yaml  NetworkRouter.yaml  RelatedEventsRouter.yaml  ReportRouter.yaml  SearchRouter.yaml  ServiceTemplatesRouter.yaml  SettingsRouter.yaml  TemplateRouter.yaml  TriggersRouter.yaml  UserManagerRouter.yaml  ZenWebTxRouter.yaml  vSphereRouter.yaml
