# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "zenapi_cz"
version = "0.0.1"
description = "API Wrapper for Zenoss Collection Zone"
readme = "README.md"
authors = [{ name = "hemie143"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GPLv3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["zenoss", "api", "wrapper"]
dependencies = ["PyYAML==6.0", "requests==2.28.1", "urllib3==1.26.12"]
requires-python = ">=3.9"

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev   = ["black", "bumpver", "pytest"]

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "src/zenapi_cz/__init__.py" = ["{version}"]

[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Reader imports"

[tool.mypy]
strict = true

    [[tool.mypy.overrides]]
    module                 = "feedparser"
    ignore_missing_imports = true